@@ -1,2 +1,7 @@
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript"></script>
+<script type="text/javascript">
+_uacct = "UA-1180396-2";
+urchinTracker();
+</script>
 </body>
 </html>
